--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
 
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js" type="module"></script>
     <script>
       jQuery(document).ready(function () {
         // alert("wow");
